# ChangeLog for app-emacs/circe
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/circe/ChangeLog,v 1.4 2008/12/23 20:12:21 tcunha Exp $

  23 Dec 2008; Tiago Cunha <tcunha@gentoo.org> circe-0_pre20070805.ebuild:
  stable sparc

  25 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  circe-0_pre20070805.ebuild:
  stable x86/amd64

*circe-0_pre20070805 (07 Nov 2007)

  07 Nov 2007; Ulrich Mueller <ulm@gentoo.org> +files/50circe-gentoo.el,
  +metadata.xml, +circe-0_pre20070805.ebuild:
  Move package from app-emacs/circe-cvs to app-emacs/circe. Add CVS snapshot.

  04 Jul 2007; Christian Faulhammer <opfer@gentoo.org>
  circe-cvs-20060810.ebuild:
  reordered KEYWORDS; manual make call to emake; reordered global scope;
  removed virtual/emacs from DEPEND; added die comments

  10 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
  circe-cvs-20060810.ebuild:
  added FDL license

  16 Aug 2006; Matthew Kennedy <mkennedy@gentoo.org>
  files/50circe-cvs-gentoo.el:
  Replace 50circe-cvs-gentoo.el; Resolves Bug #143472.

  12 Aug 2006; Matthew Kennedy <mkennedy@gentoo.org>
  circe-cvs-20060810.ebuild:
  Build and install Info documentation.

*circe-cvs-20060810 (10 Aug 2006)

  10 Aug 2006; Matthew Kennedy <mkennedy@gentoo.org>
  +files/50circe-cvs-gentoo.el, +metadata.xml, +circe-cvs-20060810.ebuild:
  Initial port. Ebuild contributed by Tassilo Horn <thorn@fastmail.fm>;
  Resolves Bug #143472.
