@@ -1,25 +1,25 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
+AUX 50circe-gentoo-1.3.el 84 SHA256 8ad7e92e41284874da456b1fd93e8afdbe95ab1bded7196cf137df832152fd00 SHA512 3f3c92f02e0a6ee760e83b83c4685a6b7f3268d0cb99abc9be56bdee8dd794d177f865582e45e90f895d1a2d9bbdc2ce39a3a60c7fc4eb973021eab66d8dbe47 WHIRLPOOL e2a40b7697540b9aff5e292e17c18972431b389a2878280a71984e7e0ab1e38a95444483daf8310b99a5e913626fac89a0f9a56e870b6502270cfe933a882c92
 AUX 50circe-gentoo.el 96 SHA256 86e1ee8cd19bd97a0c9b46c3109017ef945f5fa3fc422f41851d3da58f43d14c SHA512 4bcfcbcdc181f0ceb0a2199391c94386bd1f95d2feddeed7136e86506e7da908a5cbd818e707fa6941637a2a5fac75bea156c56ddafc420c2a0b9fb32d52e5aa WHIRLPOOL 1255c16fdcbd065d0354d58ba6ee4b3004642f0cb4206eb1e50a0baaa234ce141c6d3bef149b66754630151ed15fc65350b86f1b988c75e28318af41b785642a
 DIST circe-0_pre20070805.tar.bz2 57038 SHA256 b6d30184ab9949c0f66de61334476269c31da854355e8fd4ffe8f07e142e7092 SHA512 6804e22cf9a1fd20a745565c09913bbcd41898d45555ca8b09f458b464fb145d6d2fae1f31c86577cdbe53b76cc1409ac31bfe49e43e539a74e5a101433e1e0f WHIRLPOOL 7f43c4b429f05151bb8d42e17f4a35d528b331004b1514b7658aa28030010e8ce16777011d55938eb3eef4e554a1fa6bd2fbc1829ea1c14acc573a0fe3756627
+DIST circe-1.3.tar.gz 118776 SHA256 02598a9e1e28fffc526fa81fd5350622af303f766a45771f99d0c0df08e294f7 SHA512 60bbd752c73e875f2306877591ad8de324db0a7446bbfebf460e44ef19c0c28d40d08c8ed9e0caa4062859b07545d310d86380377a479eb6bc38c72decfaa213 WHIRLPOOL ac531d3f5aa4a5697c2927c4b33913101383ac92ff61f159505935d33bf0b69e61db90a975840d55e790209355a4e4930bab6928503a12698558089a0cd39a92
 EBUILD circe-0_pre20070805.ebuild 630 SHA256 e9c3781818354a0319bcc4d9f02b86ccdfc747ce83d6c58d9519217e0f597e1e SHA512 07b375af9c26605a38a404938a284e32703e2e22af0b1f38dd04b22545f2870ac43bb8307eb576be7193c68bd6f3b5d98964d356bb72360f4d7d4c36aad540a8 WHIRLPOOL ea8a76160050a008b591b23c17d3040de9603c653fc488b903be8b8fc4bdee11853d1c34576db36da2b5182ef42bd823b8950b342968db889467880e30a19cf9
-MISC ChangeLog 1475 SHA256 12b75cb2ec8802ad34311ae9866e6e28365c6c966be3a3ea3a708f591b646730 SHA512 e9519ec2811a62a310a6703df55f2fbe09c70e0babb211b02628277637032156b38346b51ea90402eaf70080e9a41963eb1fcc29c07e847cca6f62354f10c34a WHIRLPOOL 9c2e0239d70cdeb71085a518767c3d42ae1c747349ff6e9d5cd2ea8af793fb228367dfcab43ad5076946616cfeb0578d39c99a6b1cf06fd8eb090d5b5541f085
+EBUILD circe-1.3.ebuild 591 SHA256 bebdc6b895c06e8bd6abd9185298903dca09ec0287f326fa1a233254fd5c82e2 SHA512 408640bef19ef4b6a4a732a37c7f631a02322614cbd535feeba2db6fe7afd65fab61d4f45348dbe77439b95b117efb9c23eb897b74ab2554c07087905a3c2f76 WHIRLPOOL 03520d62a149355af826db3785e69da06b03c99cc7517e818b2afcc1c37404ad297020e19b6592fcc030cdc1691c112102b6d0a89aa7026ca0f9a0e62fc81544
+MISC ChangeLog 1642 SHA256 4121bdcdd482ea62dd50f9df084194e449d39267a1ababb2cc24d2b57ecc6c5a SHA512 34d9f135b14825c882e31ba5db085400511c9e69acebb825a08f0609952b8b2f802b6a2b43c83137c3a9b55e95ae0dfba99cf7a7fee6d69709383017b1b288b6 WHIRLPOOL 6cb6217c1c3e5abf8ffd3a2f651a24891db39deaf37f04b24b61f7ae0ce3a4bb8ac280a39b13213ede95be43657f2c0ee81ce49c02d81de1a90ae576dc96fe99
 MISC metadata.xml 158 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab SHA512 e55d75feae933ba948ae987305ea58e36f5880f18687e8acaf91237e33e251be3ecfd5be27048f4907ea6799e0bcf784b602096dd7e2bc9c450eb5e2bb6a73d2 WHIRLPOOL 1d1676172186235a3e99ca1d148298fb24f6a089f9b7908b3c28c246c8854969835fd3742b8b81e0a30b63d76ee0be0c42bfede2416a30dfc3c8b915a147340c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBAgAGBQJP9esxAAoJEDxpGckxwJCBsUMP/R+xRUVgXJBYHbRrxeXIp0S7
-PRB7ypicqh0r4h6hIvuH2M801WsFXABSYryZDD0kmgbAGi9C8aNvDGeWXqlRdMBp
-KVvE4jbaSJHm9S/HhqQa0YeBGjptadmQZU90pUsK5k4JGQquvUHAKlT+smlV8wiZ
-ofBtDA8opy5Uc6WjPBWgcUGw0igEOpnu9UbZm9Q1lB9kWgLfVmbeBwS27sdrC8Dx
-7+X1hdTS1h5PhqM6xT2ELGr3+3xfzojUq92fda/rj6Z8QfgV0Ly/h0lSdzu+z4fr
-on6Vy6nWJBFWDKbzMxG3zqEncYz1N5rthxejdVSrW+LE4/dXMcFOmeB393uWa6mC
-ub8zhyF8iW3d27unIN93JvYLQWUNdwx2C3QJuK4IAgOKtxNwR3vy0x9VxUMsRi+b
-ZfOk+ASOXHEMNZJmYYWCavDyLMb1Jc0QQ62U/LOA8LRCu4RoT/IXbk33kbAflbMj
-JDlqg+SBrsfVH+ssAXQlvTr6odDLbNL3Hj8Fh+g7u4Sy+dMfKZruigrJ0MFXOlC/
-FPD5ogdGY/0qdrwrgazEoc6DKtxMjIJeBBYbl8ufBcso6D9y/lA8qVShy8v9AAv8
-6P3d10TXX2XG09EmPK84qx0N5AN/NDQD8iJCH4RlScNOMHRZJ53B8E5G8PRgLxt4
-tFEI9Qc6HSiNPva7N4Z/
-=WOvT
+iQGcBAEBCAAGBQJTBby3AAoJEJQzkH1pP7W4JI4MAIfxSyQlRTzHbYFMAku5NXH9
+P+xBO4pZpB3d0qse1RQsypYx2e0HCIEgAuqpGgs6iaixJuXqaFG+4WL9b1CRasb+
+LZ/VBw5tZsBAetXPDPRYWMptB5LUhK8vatRxEv9C4KwxrcrH56cgylKxISs4Gghj
+whoa5+P/T0UsbhVFMD3BxFTh9Bs+9F4kmGtRDeiS7Cdgf9+hWGP5kLY/gsTU5sYK
+7omC9VOO0y9VjDELBqwQcakMQ/qiEM8BweiajOEWZN7CO63IU/CprvAb5b6jkUjW
+JfMiDBw5rkGyJvmNQxSIS2P/L1waxzYYSJqqXykC7f4BZLXBsqvxNydBM1Ai9Vuh
+DD69doUIBK4MvgeaYQw5zm0NwjzU2VJLWn8vxyJL/9wgN/No+iHvBT5uAShD1Syj
+SVXrmvWbByy7qQuk1lmGD9nxXMOmLxKAQ25AVSk+AxFRDdeo5XqTHXYL0Z26Hp2Q
+r6CHkFqnYtoOqpUUZ4coBD7MI/JJggap+k0NSf2cVQ==
+=UGgb
 -----END PGP SIGNATURE-----
