@@ -1,0 +1,2 @@
+(add-to-list 'load-path "@SITELISP@")
+(autoload 'circe "circe" "Connect to IRC." t)
