@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile configure install postinst postrm prepare setup unpack
+DEPEND=>=virtual/emacs-21
+DESCRIPTION=A great IRC client for Emacs
+EAPI=5
+HOMEPAGE=http://www.jorgenschaefer.de/software/circe/ http://www.emacswiki.org/emacs/Circe
+KEYWORDS=~amd64 ~ppc ~sparc ~x86
+LICENSE=GPL-3+
+RDEPEND=>=virtual/emacs-21
+SLOT=0
+SRC_URI=https://github.com/jorgenschaefer/circe/archive/circe-1.3.tar.gz
+_eclasses_=elisp	ae11b438eee6c692e6c94c9a86999514	elisp-common	cec01e54df1bfd2fcca76a13ce2b2d27	eutils	40081e8c7e7f7c4f9db349a1d6d52925	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=1eb4b7226c9be040c4f6de8ad1a42758
